--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "App.js",
   "type": "module",
   "scripts": {
-    "server": "json-server --watch db.json"
+    "server": "json-server --watch ../db.json"
   },
   "keywords": [],
   "author": "",
