--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "lit-html": "^3.1.2",
     "sweetalert2": "^11.10.6"
   }
 }
