feat(Web Componnets): :construction: Botones agregar funcionando
Todos los botones agregar funcionando mediante las 2 funciones pato en Api

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "conventionalCommits.scopes": [
-        "correccion titulo wc agregar-activo"
+        "correccion titulo wc agregar-activo",
+        "Web Componnets"
     ]
 }
